Replace raw foreign key value in payments with primary descriptors

--- a/app/views/payments/index.html.erb
+++ b/app/views/payments/index.html.erb
@@ -18,7 +18,7 @@
 
       <% @payments.each do |payment| %>
       <tr>
-        <td><%= payment.user_id %></td>
+        <td><%= payment.user.email %></td>
         <td><%= payment.other_id %></td>
         <td><%= payment.amount %></td>
         <td><%= payment.description %></td>
