--- a/app/views/payments/index.html.erb
+++ b/app/views/payments/index.html.erb
@@ -19,7 +19,7 @@
       <% @payments.each do |payment| %>
       <tr>
         <td><%= payment.user.email %></td>
-        <td><%= payment.other_id %></td>
+        <td><%= payment.debtorcreditor.email %></td>
         <td><%= payment.amount %></td>
         <td><%= payment.description %></td>
         <td>
