Link to associated objects

--- a/app/views/debts/index.html.erb
+++ b/app/views/debts/index.html.erb
@@ -17,7 +17,13 @@
 
       <% @debts.each do |debt| %>
       <tr>
-        <td><%= debt.user.email %></td>
+        <td>
+          <% if debt.user.present? %>
+            <a href="/users/<%= debt.user.id %>">
+              <%= debt.user.email %>
+            </a>
+          <% end %>
+        </td>
         <td><%= debt.amount %></td>
         <td><%= debt.other_id %></td>
         <td>
