--- a/app/views/debts/show.html.erb
+++ b/app/views/debts/show.html.erb
@@ -6,7 +6,13 @@
   <div class="col-md-12 mb-2">
     <dl class="dl-horizontal">
       <dt>User</dt>
-      <dd><%= @debt.user_id %></dd>
+      <dd>
+        <% if @debt.user.present? %>
+          <a href="/users/<%= @debt.user_id %>">
+            <%= @debt.user.email %>
+          </a>
+        <% end %>
+      </dd>
 
       <dt>Amount</dt>
       <dd><%= @debt.amount %></dd>
