--- a/app/views/likes/show.html.erb
+++ b/app/views/likes/show.html.erb
@@ -6,10 +6,22 @@
   <div class="col-md-12 mb-2">
     <dl class="dl-horizontal">
       <dt>User</dt>
-      <dd><%= @like.user_id %></dd>
+      <dd>
+        <% if @like.user.present? %>
+          <a href="/users/<%= @like.user_id %>">
+            <%= @like.user.email %>
+          </a>
+        <% end %>
+      </dd>
 
       <dt>Payment</dt>
-      <dd><%= @like.payment_id %></dd>
+      <dd>
+        <% if @like.payment.present? %>
+          <a href="/payments/<%= @like.payment_id %>">
+            <%= @like.payment.created_at %>
+          </a>
+        <% end %>
+      </dd>
 
     </dl>
 
