--- a/app/views/payments/show.html.erb
+++ b/app/views/payments/show.html.erb
@@ -6,10 +6,22 @@
   <div class="col-md-12 mb-2">
     <dl class="dl-horizontal">
       <dt>User</dt>
-      <dd><%= @payment.user_id %></dd>
+      <dd>
+        <% if @payment.user.present? %>
+          <a href="/users/<%= @payment.user_id %>">
+            <%= @payment.user.email %>
+          </a>
+        <% end %>
+      </dd>
 
       <dt>Other</dt>
-      <dd><%= @payment.other_id %></dd>
+      <dd>
+        <% if @payment.debtorcreditor.present? %>
+          <a href="/users/<%= @payment.other_id %>">
+            <%= @payment.debtorcreditor.email %>
+          </a>
+        <% end %>
+      </dd>
 
       <dt>Amount</dt>
       <dd><%= @payment.amount %></dd>
